# cpuidZ

./: .gitignore  CMakeLists.txt  README.md  check_cpuid.S  check_cpuid.asm  main.c
.github/workflows/: cmake-multi-platform.yml  cpack-multi-platform.yml
input_files/: cpuidx-config.cmake.in  libcpuidx.pc.in
lib/: CMakeLists.txt  README.md  check_cpuid.S  check_cpuid.asm  check_cpuid_nasm.asm  cpuidx.c  cpuidx.h
src/: CMakeLists.txt  README.md  main.c  main.cpp
